fix(dropdown-item): rm elipsis and overflow hidden

--- a/src/postcss/dropdown.css
+++ b/src/postcss/dropdown.css
@@ -147,13 +147,10 @@ $dropdown-item-bg-color--active: $color-grey-2;
     & .dropdown-item,
     & .prefixed-item {
       font-size: 12px;
-      height: 30px;
+      min-height: 30px;
       cursor: pointer;
       padding: 0 20px;
       line-height: 30px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
 
       &:hover {
         background-color: $dropdown-item-bg-color--hover;
